fix(CodeEditor): fix copy button z-index (#2649)

--- a/packages/components/src/components/CodeEditor/CodeEditor.module.scss
+++ b/packages/components/src/components/CodeEditor/CodeEditor.module.scss
@@ -2,6 +2,7 @@
 
 .codeEditor {
   outline: none;
+  isolation: isolate;
 
   .codeMirror {
     @include formControl.formControl();
